新增 try catch